feat(pwa): Added progressive web app support

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/http": "^6.1.0",
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/pwa": "^0.7.3",
     "@angular/router": "^6.1.0",
+    "@angular/service-worker": "^6.1.0",
     "@hisptz/ngx-dhis2-http-client": "^1.0.4",
     "@hisptz/ngx-dhis2-menu": "^1.0.6",
     "@ngrx/effects": "^6.1.0",
