--- a/package.json
+++ b/package.json
@@ -13,40 +13,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.2",
-    "@angular/common": "^7.0.2",
-    "@angular/compiler": "^7.0.2",
-    "@angular/core": "^7.0.2",
-    "@angular/forms": "^7.0.2",
-    "@angular/http": "^7.0.2",
-    "@angular/platform-browser": "^7.0.2",
-    "@angular/platform-browser-dynamic": "^7.0.2",
-    "@angular/pwa": "^0.7.3",
-    "@angular/router": "^7.0.2",
-    "@angular/service-worker": "^7.0.2",
+    "@angular/animations": "^7.2.4",
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/forms": "^7.2.4",
+    "@angular/http": "^7.2.4",
+    "@angular/platform-browser": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/pwa": "^0.7.5",
+    "@angular/router": "^7.2.4",
+    "@angular/service-worker": "^7.2.4",
     "@hisptz/ngx-dhis2-http-client": "^1.0.4",
-    "@hisptz/ngx-dhis2-menu": "^1.0.6",
-    "@ngrx/effects": "^6.1.0",
-    "@ngrx/entity": "^6.1.0",
-    "@ngrx/router-store": "^6.1.0",
-    "@ngrx/store": "^6.1.0",
-    "@ngrx/store-devtools": "^6.1.0",
+    "@hisptz/ngx-dhis2-menu": "^1.0.7",
+    "@ngrx/effects": "^6.1.2",
+    "@ngrx/entity": "^6.1.2",
+    "@ngrx/router-store": "^6.1.2",
+    "@ngrx/store": "^6.1.2",
+    "@ngrx/store-devtools": "^6.1.2",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
+    "bootstrap": "^4.2.1",
+    "core-js": "^2.6.4",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.4",
-    "@angular/compiler-cli": "^7.0.2",
-    "@angular/language-service": "^7.0.2",
-    "@compodoc/compodoc": "^1.1.6",
-    "@ngrx/schematics": "^6.1.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "^0.13.1",
+    "@angular/cli": "^7.3.1",
+    "@angular/compiler-cli": "^7.2.4",
+    "@angular/language-service": "^7.2.4",
+    "@compodoc/compodoc": "^1.1.8",
+    "@ngrx/schematics": "^6.1.2",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "commitizen": "^2.10.1",
@@ -58,7 +58,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
