--- a/package.json
+++ b/package.json
@@ -13,47 +13,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.4",
-    "@angular/common": "^7.2.4",
-    "@angular/compiler": "^7.2.4",
-    "@angular/core": "^7.2.4",
-    "@angular/forms": "^7.2.4",
-    "@angular/http": "^7.2.4",
-    "@angular/platform-browser": "^7.2.4",
-    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/animations": "^7.2.7",
+    "@angular/common": "^7.2.7",
+    "@angular/compiler": "^7.2.7",
+    "@angular/core": "^7.2.7",
+    "@angular/forms": "^7.2.7",
+    "@angular/http": "^7.2.7",
+    "@angular/platform-browser": "^7.2.7",
+    "@angular/platform-browser-dynamic": "^7.2.7",
     "@angular/pwa": "^0.7.5",
-    "@angular/router": "^7.2.4",
-    "@angular/service-worker": "^7.2.4",
+    "@angular/router": "^7.2.7",
+    "@angular/service-worker": "^7.2.7",
     "@hisptz/ngx-dhis2-http-client": "^1.0.4",
     "@hisptz/ngx-dhis2-menu": "^1.0.7",
-    "@ngrx/effects": "^6.1.2",
-    "@ngrx/entity": "^6.1.2",
-    "@ngrx/router-store": "^6.1.2",
-    "@ngrx/store": "^6.1.2",
-    "@ngrx/store-devtools": "^6.1.2",
+    "@ngrx/effects": "^7.3.0",
+    "@ngrx/entity": "^7.3.0",
+    "@ngrx/router-store": "^7.3.0",
+    "@ngrx/store": "^7.3.0",
+    "@ngrx/store-devtools": "^7.3.0",
     "@ngx-translate/core": "^10.0.2",
     "@ngx-translate/http-loader": "^3.0.1",
     "bootstrap": "^4.2.1",
     "core-js": "^2.6.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.13.1",
-    "@angular/cli": "^7.3.1",
-    "@angular/compiler-cli": "^7.2.4",
-    "@angular/language-service": "^7.2.4",
-    "@compodoc/compodoc": "^1.1.8",
-    "@ngrx/schematics": "^6.1.2",
+    "@angular/cli": "^7.3.4",
+    "@angular/compiler-cli": "^7.2.7",
+    "@angular/language-service": "^7.2.7",
+    "@compodoc/compodoc": "^1.1.9",
+    "@ngrx/schematics": "^7.3.0",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
-    "commitizen": "^2.10.1",
+    "commitizen": "^3.0.7",
     "cz-conventional-changelog": "^2.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
@@ -61,7 +62,7 @@
     "protractor": "^5.4.2",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.2.4"
   },
   "config": {
     "commitizen": {
