--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngx-seed-app": {
+    "rbf-app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngx-seed-app",
+            "outputPath": "dist/rbf-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -54,19 +54,19 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-seed-app:build",
+            "browserTarget": "rbf-app:build",
             "proxyConfig": "proxy-config.json"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-seed-app:build:production"
+              "browserTarget": "rbf-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-seed-app:build"
+            "browserTarget": "rbf-app:build"
           }
         },
         "test": {
@@ -91,7 +91,7 @@
         }
       }
     },
-    "ngx-seed-app-e2e": {
+    "rbf-app-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -99,11 +99,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngx-seed-app:serve"
+            "devServerTarget": "rbf-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngx-seed-app:serve:production"
+              "devServerTarget": "rbf-app:serve:production"
             }
           }
         },
@@ -117,7 +117,7 @@
       }
     }
   },
-  "defaultProject": "ngx-seed-app",
+  "defaultProject": "rbf-app",
   "cli": {
     "defaultCollection": "@ngrx/schematics"
   }
