--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "core-js": "^3.1.4",
     "d2": "^31.8.1",
     "dexie": "^2.0.4",
+    "lodash": "^4.17.15",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
