--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.0.1",
+    "@angular/cdk": "^8.1.2",
     "@angular/common": "^8.0.1",
     "@angular/compiler": "^8.0.1",
     "@angular/core": "^8.0.1",
     "@angular/forms": "^8.0.1",
+    "@angular/material": "^8.1.2",
     "@angular/platform-browser": "^8.0.1",
     "@angular/platform-browser-dynamic": "^8.0.1",
     "@angular/pwa": "^0.800.3",
     "@angular/router": "^8.0.1",
     "@angular/service-worker": "^8.0.1",
+    "@iapps/function-analytics": "^1.0.0-beta.18",
     "@iapps/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-menu": "^1.0.9",
+    "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.13",
     "@ngrx/effects": "^8.0.1",
     "@ngrx/entity": "^8.0.1",
     "@ngrx/router-store": "^8.0.1",
@@ -38,7 +42,11 @@
     "core-js": "^3.1.4",
     "d2": "^31.8.1",
     "dexie": "^2.0.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "i": "^0.3.6",
     "lodash": "^4.17.15",
+    "npm": "^6.10.3",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
