--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@iapps/function-analytics": "^1.0.0-beta.18",
     "@iapps/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-menu": "^1.0.9",
+    "@iapps/ngx-dhis2-org-unit-filter": "^1.1.20",
     "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.13",
     "@ngrx/effects": "^8.0.1",
     "@ngrx/entity": "^8.0.1",
