--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@iapps/ngx-dhis2-menu": "^1.0.9",
     "@iapps/ngx-dhis2-org-unit-filter": "^1.1.20",
     "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.13",
+    "@iapps/utils": "^1.0.1-alpha.1",
     "@ngrx/effects": "^8.0.1",
     "@ngrx/entity": "^8.0.1",
     "@ngrx/router-store": "^8.0.1",
