--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/router": "^8.0.1",
     "@angular/service-worker": "^8.0.1",
     "@iapps/function-analytics": "^1.0.0-beta.18",
-    "@iapps/ngx-dhis2-http-client": "^2.0.2",
+    "@iapps/ngx-dhis2-http-client": "^2.0.8-beta.2",
     "@iapps/ngx-dhis2-menu": "^1.0.9",
     "@iapps/ngx-dhis2-org-unit-filter": "^1.1.20",
     "@iapps/ngx-dhis2-period-filter": "^1.0.0-beta.13",
@@ -58,7 +58,7 @@
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.1",
     "@angular/language-service": "^8.0.1",
-    "@compodoc/compodoc": "^1.1.9",
+    "@compodoc/compodoc": "^1.1.10",
     "@ngrx/schematics": "^8.0.1",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
