--- a/package.json
+++ b/package.json
@@ -55,13 +55,13 @@
     "ng2-dragula": "^2.1.1",
     "ngx-color-picker": "^8.1.0",
     "ngx-pagination": "^4.1.0",
-    "npm": "^6.13.1",
+    "npm": "^6.13.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.1",
     "@angular/language-service": "^8.0.1",
